# Generated by Django 6.0.3 on 2026-03-29 01:30

import django.db.models.deletion
import django.utils.timezone
import uuid
from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ('rooms', '0002_participant_current_game_match'),
    ]

    operations = [
        migrations.CreateModel(
            name='ParticipantRoleAssignment',
            fields=[
                ('participant_role_assignment_id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('role_type', models.CharField(choices=[('host', 'Host'), ('moderator', 'Moderator'), ('player', 'Player'), ('spectator', 'Spectator'), ('narrator', 'Narrator'), ('referee', 'Referee')], max_length=32)),
                ('scope_type', models.CharField(choices=[('room', 'Room'), ('table', 'Table'), ('match', 'Match'), ('tournament', 'Tournament'), ('game', 'Game')], max_length=32)),
                ('scope_id', models.UUIDField()),
                ('created_at', models.DateTimeField(default=django.utils.timezone.now)),
                ('expires_at', models.DateTimeField(blank=True, null=True)),
                ('metadata_json', models.JSONField(default=dict)),
                ('granted_by_participant', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='granted_role_assignments', to='rooms.participant')),
                ('participant', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='role_assignments', to='rooms.participant')),
            ],
            options={
                'db_table': 'participant_role_assignment',
                'constraints': [models.UniqueConstraint(fields=('participant', 'role_type', 'scope_type', 'scope_id'), name='uq_participant_role_scope')],
            },
        ),
    ]
